--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,9 +7,10 @@ repos:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-yaml
+        args: [--allow-multiple-documents]
     -   id: check-added-large-files
-- repo: https://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.48.0
+- repo: https://github.com/hmcts/cpp-hooks-pre-commit-terraform
+  rev: main
   hooks:
     - id: terraform_fmt
     - id: terraform_validate
@@ -17,7 +18,7 @@ repos:
   rev: v4.3.0
   hooks:
     - id: check-merge-conflict
-- repo: https://github.com/zricethezav/gitleaks
-  rev: v8.2.0
+- repo: https://github.com/hmcts/cpp-hooks-gitleaks
+  rev: main
   hooks:
     - id: gitleaks
