--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,13 +8,13 @@ resources:
   - repository: cppAzureDevOpsTemplates
     type: github
     name: hmcts/cpp-azure-devops-templates
-    ref: 'dev/EI-921'
+    ref: 'main'
     endpoint: 'cpp-apps'
 
 extends:
   template: pipelines/terratest.yaml@cppAzureDevOpsTemplates
   parameters:
-    agentPool: "MDV-ADO-AGENTS-TEST-01"
+    agentPool: "MDV-ADO-AGENTS-01"
     spnCredentialsVarGroup: "terratest-app-registration"
     azureServiceConnection: "ado_nonlive_service_principal_lab"
     terratestTimeout: "30"
