--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,13 +8,14 @@ resources:
   - repository: cppAzureDevOpsTemplates
     type: github
     name: hmcts/cpp-azure-devops-templates
+    ref: 'main'
     endpoint: 'cpp-apps'
 
 extends:
   template: pipelines/terratest.yaml@cppAzureDevOpsTemplates
   parameters:
-    agentPool: "ubuntu-latest"
+    agentPool: "MDV-ADO-AGENTS-01"
     spnCredentialsVarGroup: "terratest-app-registration"
     azureServiceConnection: "ado_nonlive_service_principal_lab"
     terratestTimeout: "30"
-    tfversion: 1.2.3
+    tfversion: 1.3.1
